月曜日質問事項まとめ完了

--- a/src_dataset/Convert_bitmap_to_polygon.ipynb
+++ b/src_dataset/Convert_bitmap_to_polygon.ipynb
@@ -493,6 +493,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 先生に質問したいこと\n",
+    "- 回転の方向について→時計Or反時計Orそれ以外  \n",
+    "- 回転に使用するモジュールについて  \n",
+    "→PIL等のPython通常の画像処理モジュールで大丈夫？  \n",
+    "もしくは太陽に特化した方法が必要？  \n",
+    "https://ehsteve-sunpy.readthedocs.io/en/latest/generated/gallery/gallery/map_rotation.html  \n",
+    "→Sunpyのこのモジュールは自転考慮？\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
