COCOImagesの部分についてそもそも画像の方のフォーマットを定義

--- a/src_dataset/Make＿coco.ipynb
+++ b/src_dataset/Make＿coco.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python361064bitpy36conda6befa9babba8473cb67cdf7215549def",
+   "name": "python_defaultSpec_1598832323445",
    "display_name": "Python 3.6.10 64-bit ('py3.6': conda)"
   }
  },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,9 +109,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "{'info': {'descripion': 'Predicting_Solar_Flare',\n  'version': '0.1',\n  'year': 2020,\n  'contributor': 'Akito Komatsu',\n  'data_created': '2020/09/01'},\n 'images': '',\n 'annotations': ''}"
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
    "source": [
     "dataset_obj = open(\"datasets.json\",\"r\")\n",
     "dataset_json =json.load(dataset_obj)\n",
@@ -119,11 +128,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## imagesの作成\n",
+    "IDはユニークで後のAnnotation等に関連付けられる  \n",
+    "→ARnum+time？検討  \n",
+    "フォーマット\n",
+    "```JSON\n",
+    "\"images\": [\n",
+    "    {\n",
+    "        \"license\": 4,\n",
+    "        \"file_name\": \"000000397133.jpg\",\n",
+    "        \"coco_url\": \"http://images.cocodataset.org/val2017/000000397133.jpg\",\n",
+    "        \"height\": 427,\n",
+    "        \"width\": 640,\n",
+    "        \"date_captured\": \"2013-11-14 17:02:52\",\n",
+    "        \"flickr_url\": \"http://farm7.staticflickr.com/6116/6255196340_da26cf2c9e_z.jpg\",\n",
+    "        \"id\": 397133\n",
+    "    },\n",
+    "    {\n",
+    "        \"license\": 1,\n",
+    "        \"file_name\": \"000000037777.jpg\",\n",
+    "        \"coco_url\": \"http://images.cocodataset.org/val2017/000000037777.jpg\",\n",
+    "        \"height\": 230,\n",
+    "        \"width\": 352,\n",
+    "        \"date_captured\": \"2013-11-14 20:55:31\",\n",
+    "        \"flickr_url\": \"http://farm9.staticflickr.com/8429/7839199426_f6d48aa585_z.jpg\",\n",
+    "        \"id\": 37777\n",
+    "    },\n",
+    "    ...\n",
+    "]\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# "
+   ]
   }
  ]
 }
