データの中に欠損がありそうなので先生の手元にないか確認してみる

--- a/src_dataset/Make_coco.ipynb
+++ b/src_dataset/Make_coco.ipynb
@@ -193,7 +193,7 @@
     "fits_path = \"/media/akito/Data/HMI_REGION/2010/*2010050*\"\n",
     "paths = sorted(glob(fits_path))\n",
     "for i, path in enumerate(paths):\n",
-    "    filename=\"/home/akito/Documents/Documents/Predict_Solar_Flare_Mrcnn/Dataset/Sun/Image/\"+path.split(\".\")[2][0:15]+\".jpg\"\n",
+    "    # filename=\"/home/akito/Documents/Documents/Predict_Solar_Flare_Mrcnn/Dataset/Sun/Image/\"+path.split(\".\")[2][0:15]+\".jpg\"\n",
     "    filename=\"/home/akito/Documents/Documents/Predict_Solar_Flare_Mrcnn/Dataset/Sun/Image/forffmpeg/\"+str(i).zfill(3)+\".jpg\"\n",
     "    map=sunpy.map.Map(path)\n",
     "    print(filename)\n",
@@ -207,8 +207,16 @@
    "metadata": {},
    "source": [
     "## 画像のフォーマットについて\n",
-    "Numpyを書き出したら白黒の4k4kのデータになっているがこれで大丈夫そうか？\n"
+    "Numpyを書き出したら白黒の4k4kのデータになっているがこれで大丈夫そうか？  \n",
+    "→大丈夫そう"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
