Coordinate_SeriesについてPickle吐き出すところまで完了。自動化するところまで行きたい

--- a/src_dataset/Convert_bitmap_to_polygon.ipynb
+++ b/src_dataset/Convert_bitmap_to_polygon.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1598848875573",
+   "name": "python_defaultSpec_1599790970145",
    "display_name": "Python 3.6.10 64-bit ('py3.6': conda)"
   }
  },
@@ -786,6 +786,30 @@
     "ax.plot(4000,4000)\n",
     "p = pat.Polygon(xy = rotated_mask_fixed)\n",
     "ax.add_patch(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "2010-05-01 00:00:00    [[(426.0, 1029.0), (426.0, 1030.0), (425.0, 10...\n2010-05-01 01:00:00    [[(426.0, 1026.0), (426.0, 1027.0), (425.0, 10...\n2010-05-01 02:00:00    [[(433.0, 1024.0), (433.0, 1025.0), (432.0, 10...\n2010-05-01 03:00:00    [[(442.0, 1022.0), (442.0, 1023.0), (441.0, 10...\n2010-05-01 04:00:00    [[(444.0, 1023.0), (444.0, 1024.0), (443.0, 10...\n                                             ...                        \n2010-12-30 20:00:00                                                   []\n2010-12-30 21:00:00                                                   []\n2010-12-30 22:00:00                                                   []\n2010-12-30 23:00:00                                                   []\n2010-12-31 00:00:00                                                   []\nFreq: H, Length: 5857, dtype: object"
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "def pickle_load(path):\n",
+    "    with open(path, mode='rb') as f:\n",
+    "        data = pickle.load(f)\n",
+    "        return data\n",
+    "coord_series = pickle_load(\"/home/akito/Documents/Documents/Predict_Solar_Flare_Mrcnn/src_dataset/Coord_series.pickle\")\n",
+    "coord_series"
    ]
   }
  ]
