一つのSHARPデータに複数領域が含まれていた場合でも処理できるように仕様変更
確認まだイマイチなのできちんとできているか考えていきたい。

--- a/src_dataset/Convert_bitmap_to_polygon.ipynb
+++ b/src_dataset/Convert_bitmap_to_polygon.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1599790970145",
+   "name": "python_defaultSpec_1599813318001",
    "display_name": "Python 3.6.10 64-bit ('py3.6': conda)"
   }
  },
@@ -790,16 +790,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "2010-05-01 00:00:00    [[(426.0, 1029.0), (426.0, 1030.0), (425.0, 10...\n2010-05-01 01:00:00    [[(426.0, 1026.0), (426.0, 1027.0), (425.0, 10...\n2010-05-01 02:00:00    [[(433.0, 1024.0), (433.0, 1025.0), (432.0, 10...\n2010-05-01 03:00:00    [[(442.0, 1022.0), (442.0, 1023.0), (441.0, 10...\n2010-05-01 04:00:00    [[(444.0, 1023.0), (444.0, 1024.0), (443.0, 10...\n                                             ...                        \n2010-12-30 20:00:00                                                   []\n2010-12-30 21:00:00                                                   []\n2010-12-30 22:00:00                                                   []\n2010-12-30 23:00:00                                                   []\n2010-12-31 00:00:00                                                   []\nFreq: H, Length: 5857, dtype: object"
+      "text/plain": "[[(426.0, 665.0),\n  (426.0, 666.0),\n  (425.0, 666.0),\n  (424.0, 666.0),\n  (424.0, 667.0),\n  (423.0, 667.0),\n  (423.0, 669.0),\n  (422.0, 669.0),\n  (422.0, 684.0),\n  (423.0, 684.0),\n  (423.0, 689.0),\n  (424.0, 689.0),\n  (424.0, 693.0),\n  (425.0, 693.0),\n  (425.0, 697.0),\n  (426.0, 697.0),\n  (426.0, 700.0),\n  (427.0, 700.0),\n  (427.0, 703.0),\n  (428.0, 703.0),\n  (428.0, 706.0),\n  (429.0, 706.0),\n  (429.0, 709.0),\n  (430.0, 709.0),\n  (430.0, 712.0),\n  (431.0, 712.0),\n  (431.0, 715.0),\n  (432.0, 715.0),\n  (432.0, 717.0),\n  (433.0, 717.0),\n  (433.0, 720.0),\n  (434.0, 720.0),\n  (434.0, 722.0),\n  (435.0, 722.0),\n  (435.0, 724.0),\n  (436.0, 724.0),\n  (436.0, 727.0),\n  (437.0, 727.0),\n  (437.0, 729.0),\n  (438.0, 729.0),\n  (438.0, 731.0),\n  (439.0, 731.0),\n  (439.0, 733.0),\n  (440.0, 733.0),\n  (440.0, 735.0),\n  (441.0, 735.0),\n  (441.0, 737.0),\n  (442.0, 737.0),\n  (442.0, 739.0),\n  (443.0, 739.0),\n  (443.0, 741.0),\n  (444.0, 741.0),\n  (444.0, 743.0),\n  (445.0, 743.0),\n  (445.0, 745.0),\n  (446.0, 745.0),\n  (446.0, 747.0),\n  (447.0, 747.0),\n  (447.0, 749.0),\n  (448.0, 749.0),\n  (448.0, 751.0),\n  (449.0, 751.0),\n  (449.0, 752.0),\n  (450.0, 752.0),\n  (450.0, 754.0),\n  (451.0, 754.0),\n  (451.0, 756.0),\n  (452.0, 756.0),\n  (452.0, 757.0),\n  (453.0, 757.0),\n  (453.0, 759.0),\n  (454.0, 759.0),\n  (454.0, 760.0),\n  (455.0, 760.0),\n  (455.0, 762.0),\n  (456.0, 762.0),\n  (456.0, 763.0),\n  (457.0, 763.0),\n  (457.0, 764.0),\n  (458.0, 764.0),\n  (458.0, 766.0),\n  (459.0, 766.0),\n  (459.0, 767.0),\n  (460.0, 767.0),\n  (460.0, 768.0),\n  (461.0, 768.0),\n  (461.0, 769.0),\n  (462.0, 769.0),\n  (462.0, 771.0),\n  (463.0, 771.0),\n  (463.0, 772.0),\n  (464.0, 772.0),\n  (464.0, 773.0),\n  (465.0, 773.0),\n  (465.0, 774.0),\n  (467.0, 774.0),\n  (467.0, 775.0),\n  (468.0, 775.0),\n  (468.0, 776.0),\n  (469.0, 776.0),\n  (469.0, 777.0),\n  (471.0, 777.0),\n  (471.0, 778.0),\n  (473.0, 778.0),\n  (473.0, 779.0),\n  (476.0, 779.0),\n  (476.0, 780.0),\n  (481.0, 780.0),\n  (481.0, 779.0),\n  (482.0, 779.0),\n  (483.0, 779.0),\n  (483.0, 778.0),\n  (484.0, 778.0),\n  (485.0, 778.0),\n  (485.0, 777.0),\n  (486.0, 777.0),\n  (486.0, 775.0),\n  (487.0, 775.0),\n  (487.0, 774.0),\n  (488.0, 774.0),\n  (488.0, 771.0),\n  (489.0, 771.0),\n  (489.0, 767.0),\n  (490.0, 767.0),\n  (490.0, 757.0),\n  (489.0, 757.0),\n  (489.0, 751.0),\n  (488.0, 751.0),\n  (488.0, 747.0),\n  (487.0, 747.0),\n  (487.0, 743.0),\n  (486.0, 743.0),\n  (486.0, 740.0),\n  (485.0, 740.0),\n  (485.0, 737.0),\n  (484.0, 737.0),\n  (484.0, 735.0),\n  (483.0, 735.0),\n  (483.0, 732.0),\n  (482.0, 732.0),\n  (482.0, 730.0),\n  (481.0, 730.0),\n  (481.0, 728.0),\n  (480.0, 728.0),\n  (480.0, 726.0),\n  (479.0, 726.0),\n  (479.0, 724.0),\n  (478.0, 724.0),\n  (478.0, 722.0),\n  (477.0, 722.0),\n  (477.0, 720.0),\n  (476.0, 720.0),\n  (476.0, 718.0),\n  (475.0, 718.0),\n  (475.0, 716.0),\n  (474.0, 716.0),\n  (474.0, 715.0),\n  (473.0, 715.0),\n  (473.0, 713.0),\n  (472.0, 713.0),\n  (472.0, 712.0),\n  (471.0, 712.0),\n  (471.0, 710.0),\n  (470.0, 710.0),\n  (470.0, 708.0),\n  (469.0, 708.0),\n  (469.0, 707.0),\n  (468.0, 707.0),\n  (468.0, 705.0),\n  (467.0, 705.0),\n  (467.0, 704.0),\n  (466.0, 704.0),\n  (466.0, 703.0),\n  (465.0, 703.0),\n  (465.0, 701.0),\n  (464.0, 701.0),\n  (464.0, 700.0),\n  (463.0, 700.0),\n  (463.0, 698.0),\n  (462.0, 698.0),\n  (462.0, 697.0),\n  (461.0, 697.0),\n  (461.0, 696.0),\n  (460.0, 696.0),\n  (460.0, 695.0),\n  (459.0, 695.0),\n  (459.0, 693.0),\n  (458.0, 693.0),\n  (458.0, 692.0),\n  (457.0, 692.0),\n  (457.0, 691.0),\n  (456.0, 691.0),\n  (456.0, 690.0),\n  (455.0, 690.0),\n  (455.0, 688.0),\n  (454.0, 688.0),\n  (454.0, 687.0),\n  (453.0, 687.0),\n  (453.0, 686.0),\n  (452.0, 686.0),\n  (452.0, 685.0),\n  (451.0, 685.0),\n  (451.0, 684.0),\n  (450.0, 684.0),\n  (450.0, 683.0),\n  (449.0, 683.0),\n  (449.0, 682.0),\n  (448.0, 682.0),\n  (448.0, 681.0),\n  (447.0, 681.0),\n  (447.0, 680.0),\n  (446.0, 680.0),\n  (446.0, 679.0),\n  (445.0, 679.0),\n  (445.0, 678.0),\n  (444.0, 678.0),\n  (444.0, 677.0),\n  (443.0, 677.0),\n  (443.0, 676.0),\n  (442.0, 676.0),\n  (442.0, 675.0),\n  (441.0, 675.0),\n  (441.0, 674.0),\n  (440.0, 674.0),\n  (440.0, 673.0),\n  (439.0, 673.0),\n  (439.0, 672.0),\n  (438.0, 672.0),\n  (438.0, 671.0),\n  (437.0, 671.0),\n  (437.0, 670.0),\n  (435.0, 670.0),\n  (435.0, 669.0),\n  (434.0, 669.0),\n  (434.0, 668.0),\n  (432.0, 668.0),\n  (432.0, 667.0),\n  (430.0, 667.0),\n  (430.0, 666.0),\n  (428.0, 666.0),\n  (428.0, 665.0),\n  (426.0, 665.0)]]"
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 5
     }
    ],
    "source": [
@@ -809,7 +809,7 @@
     "        data = pickle.load(f)\n",
     "        return data\n",
     "coord_series = pickle_load(\"/home/akito/Documents/Documents/Predict_Solar_Flare_Mrcnn/src_dataset/Coord_series.pickle\")\n",
-    "coord_series"
+    "coord_series[\"2010-05-01 00:00:00\"][0]"
    ]
   }
  ]
