Polygonの可視化がうまく行かない・・作り方に問題があるかも

--- a/src_dataset/Checking_Dataset.ipynb
+++ b/src_dataset/Checking_Dataset.ipynb
@@ -1035,11 +1035,52 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 欠損データの確認\n",
+    "ダウンロードできていなかったデータがあったことから欠損データがあることが考えられるのでサーバ側に確認してどのデータがあってどのデータがないのか確認してみる。  \n",
+    "本来あるべき数:3840  \n",
+    "実際のカウント:3828  \n",
+    "http://jsoc.stanford.edu/SUM8/D1326827249/S00000/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[Timestamp('2010-05-03 00:00:00', freq='45S'),\n Timestamp('2010-05-03 12:00:00', freq='45S'),\n Timestamp('2010-05-03 19:12:00', freq='45S'),\n Timestamp('2010-05-03 21:36:00', freq='45S'),\n Timestamp('2010-05-04 00:00:00', freq='45S'),\n Timestamp('2010-05-04 02:24:00', freq='45S'),\n Timestamp('2010-05-04 04:48:00', freq='45S'),\n Timestamp('2010-05-04 07:12:00', freq='45S'),\n Timestamp('2010-05-04 09:36:00', freq='45S'),\n Timestamp('2010-05-04 12:00:00', freq='45S'),\n Timestamp('2010-05-04 14:24:00', freq='45S'),\n Timestamp('2010-05-04 16:48:00', freq='45S'),\n Timestamp('2010-05-04 19:12:00', freq='45S')]"
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from datetime import datetime as dt\n",
+    "START = \"2010-05-03\"\n",
+    "END = \"2010-05-05\"\n",
+    "def initialize_series ():\n",
+    "    time_index = pd.date_range(start = START,end = END,freq =\"45s\")\n",
+    "    time_series = pd.Series([0 for i in range(len(time_index))],index = time_index)\n",
+    "    return time_series\n",
+    "time_series=initialize_series()\n",
+    "with open (\"check_server_files.txt\", \"r\") as f:\n",
+    "    datas =  f.read()\n",
+    "    datas = datas.split(\"\\n\")\n",
+    "for data in datas:\n",
+    "    key = data[10:29]\n",
+    "    key = dt.strptime(key,'%Y.%m.%d_%H:%M:%S')\n",
+    "    time_series[key] = 1\n",
+    "\n",
+    "[key for key,value in time_series.items() if value==0]"
+   ]
   }
  ],
  "metadata": {
