Annotation途中まで。ApplyとかMapの仕様がなんとなくわかってきた。

--- a/src_dataset/Make_coco.ipynb
+++ b/src_dataset/Make_coco.ipynb
@@ -10,12 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10-final"
+   "version": "3.7.9-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.6.10 64-bit ('py3.6': conda)",
-   "display_name": "Python 3.6.10 64-bit ('py3.6': conda)",
+   "name": "python_defaultSpec_1602133273692",
+   "display_name": "Python 3.8.5 64-bit",
    "metadata": {
     "interpreter": {
      "hash": "c1adb5375f229d1eea2415024ee773cb2493614d24a9913a0f46472292080f4e"
@@ -95,6 +95,7 @@
     "    tmp[\"contributor\"] = \"Akito Komatsu\"\n",
     "    tmp[\"data_created\"] = \"2020/09/01\"\n",
     "    return tmp\n",
+    "    \n",
     "def main():\n",
     "    query_list = [\"info\",\"images\",\"annotations\"]\n",
     "    js = cl.OrderedDict()\n",
@@ -230,6 +231,81 @@
     "## 画像のフォーマットについて\n",
     "Numpyを書き出したら白黒の4k4kのデータになっているがこれで大丈夫そうか？  \n",
     "→大丈夫そう"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Annotaionの付与について\n",
+    "Pickleの吐き出しまでは良さそうなのでAnnotationをつけるとところをやっていく"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# データの読み出し\n",
+    "import utils \n",
+    "path = \"/Users/komatsu/Documents/Predict_Solar_Flare_Mrcnn/coord_df.pickle\"\n",
+    "coord_df = utils.pickle_load(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Polygon  C_FLARE  M_FLARE  X_FLARE\n2010-05-01 00:00:00        6        6        6        6\n2010-05-01 01:00:00        5        5        5        5\n2010-05-01 02:00:00        4        4        4        4\n2010-05-01 03:00:00        4        4        4        4\n2010-05-01 04:00:00        4        4        4        4\n...                      ...      ...      ...      ...\n2019-12-31 20:00:00        0        0        0        0\n2019-12-31 21:00:00        0        0        0        0\n2019-12-31 22:00:00        0        0        0        0\n2019-12-31 23:00:00        0        0        0        0\n2020-01-01 00:00:00        0        0        0        0\n\n[84769 rows x 4 columns]\n"
+    }
+   ],
+   "source": [
+    "# Polygonとそれぞれのフレアデータが正しく入っているか確認\n",
+    "f_len = lambda x : [len(cell) for cell in x]\n",
+    "print(coord_df.apply(f_len))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "3834.0\n[421.0, 2913.0, 68.0, 115.0]\n2010-05-01 00:00:00\n951.0\n[1395.0, 2660.0, 53.0, 24.0]\n2010-05-01 00:00:00\n5151.0\n[1226.0, 2646.0, 130.0, 53.0]\n2010-05-01 00:00:00\n16580.0\n[1297.0, 2760.0, 169.0, 133.0]\n2010-05-01 00:00:00\n15289.0\n[2283.0, 1262.0, 253.0, 80.0]\n2010-05-01 00:00:00\n15065.0\n[2006.0, 1181.0, 171.0, 109.0]\n2010-05-01 00:00:00\n4678.0\n[421.0, 2909.0, 74.0, 120.0]\n2010-05-01 01:00:00\n10006.0\n[1237.0, 2640.0, 230.0, 63.0]\n2010-05-01 01:00:00\n19599.0\n[1312.0, 2722.0, 173.0, 173.0]\n2010-05-01 01:00:00\n16049.0\n[2299.0, 1260.0, 256.0, 82.0]\n2010-05-01 01:00:00\n17109.0\n[2021.0, 1176.0, 182.0, 117.0]\n2010-05-01 01:00:00\n5147.0\n[426.0, 2909.0, 77.0, 122.0]\n2010-05-01 02:00:00\n31692.0\n[1253.0, 2639.0, 249.0, 258.0]\n2010-05-01 02:00:00\n16229.0\n[2314.0, 1259.0, 258.0, 84.0]\n2010-05-01 02:00:00\n17482.0\n[2036.0, 1175.0, 184.0, 119.0]\n2010-05-01 02:00:00\n5482.0\n[431.0, 2909.0, 79.0, 123.0]\n2010-05-01 03:00:00\n33325.0\n[1268.0, 2638.0, 251.0, 259.0]\n2010-05-01 03:00:00\n16577.0\n[2330.0, 1259.0, 256.0, 87.0]\n2010-05-01 03:00:00\n17699.0\n[2052.0, 1174.0, 183.0, 120.0]\n2010-05-01 03:00:00\n5697.0\n[437.0, 2911.0, 80.0, 120.0]\n2010-05-01 04:00:00\n34564.0\n[1284.0, 2637.0, 256.0, 260.0]\n2010-05-01 04:00:00\n16779.0\n[2346.0, 1258.0, 254.0, 89.0]\n2010-05-01 04:00:00\n18430.0\n[2068.0, 1172.0, 189.0, 123.0]\n2010-05-01 04:00:00\n5883.0\n[442.0, 2911.0, 82.0, 121.0]\n2010-05-01 05:00:00\n35272.0\n[1300.0, 2637.0, 259.0, 260.0]\n2010-05-01 05:00:00\n16947.0\n[2361.0, 1257.0, 254.0, 90.0]\n2010-05-01 05:00:00\n8047.0\n[2361.0, 1257.0, 286.0, 94.0]\n2010-05-01 05:00:00\n19069.0\n[2083.0, 1172.0, 196.0, 123.0]\n2010-05-01 05:00:00\n5977.0\n[449.0, 2913.0, 83.0, 119.0]\n2010-05-01 06:00:00\n36291.0\n[1317.0, 2637.0, 260.0, 261.0]\n2010-05-01 06:00:00\n16900.0\n[2377.0, 1257.0, 253.0, 90.0]\n2010-05-01 06:00:00\n19014.0\n[2099.0, 1172.0, 194.0, 123.0]\n2010-05-01 06:00:00\n6040.0\n[456.0, 2914.0, 83.0, 118.0]\n2010-05-01 07:00:00\n36681.0\n[1333.0, 2637.0, 262.0, 262.0]\n2010-05-01 07:00:00\n16813.0\n[2392.0, 1257.0, 253.0, 90.0]\n2010-05-01 07:00:00\n19048.0\n[2114.0, 1172.0, 196.0, 122.0]\n2010-05-01 07:00:00\n6023.0\n[463.0, 2916.0, 83.0, 117.0]\n2010-05-01 08:00:00\n36702.0\n[1351.0, 2638.0, 263.0, 262.0]\n2010-05-01 08:00:00\n16577.0\n[2408.0, 1258.0, 251.0, 88.0]\n2010-05-01 08:00:00\n18950.0\n[2130.0, 1172.0, 194.0, 122.0]\n2010-05-01 08:00:00\n5902.0\n[470.0, 2919.0, 82.0, 114.0]\n2010-05-01 09:00:00\n36423.0\n[1368.0, 2639.0, 263.0, 261.0]\n2010-05-01 09:00:00\n16269.0\n[2423.0, 1259.0, 250.0, 86.0]\n2010-05-01 09:00:00\n18999.0\n[2145.0, 1171.0, 195.0, 123.0]\n2010-05-01 09:00:00\n"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from shapely.geometry import Polygon\n",
+    "def annotations(pickle_path):\n",
+    "    tmps = []\n",
+    "    coord_df = pd.read_pickle(pickle_path)\n",
+    "    coord_df.apply(make_annotation_line,tmp=tmps,axis=1)\n",
+    "    # print(coord_df.iloc[0][\"Polygon\"][0][0][0])\n",
+    "    # return tmps\n",
+    "\n",
+    "def make_annotation_line(line,tmp):\n",
+    "    for i in range(len(line[\"Polygon\"])):\n",
+    "        polygon = Polygon(line[\"Polygon\"][i])\n",
+    "        bb_coord = polygon.bounds\n",
+    "        print(polygon.area)\n",
+    "        bbox = [bb_coord[0],bb_coord[1],bb_coord[2]-bb_coord[0],bb_coord[3]-bb_coord[1]]\n",
+    "        print(bbox)\n",
+    "        print(line.name)\n",
+    "        # TODO:Annotation完成させる\n",
+    "\n",
+    "annotations(\"/Users/komatsu/Documents/Predict_Solar_Flare_Mrcnn/coord_df.pickle\")\n"
    ]
   },
   {
