--- a/src_dataset/Checking_Dataset.ipynb
+++ b/src_dataset/Checking_Dataset.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1081,13 +1081,73 @@
     "\n",
     "[key for key,value in time_series.items() if value==0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                                                               Polygon  \\\n",
+       "2010-05-01 00:00:00  [[(425.0, 2914.0), (425.0, 2915.0), (424.0, 29...   \n",
+       "2010-05-01 01:00:00  [[(425.0, 2910.0), (425.0, 2911.0), (424.0, 29...   \n",
+       "2010-05-01 02:00:00  [[(432.0, 2910.0), (432.0, 2911.0), (431.0, 29...   \n",
+       "2010-05-01 03:00:00  [[(441.0, 2910.0), (441.0, 2911.0), (440.0, 29...   \n",
+       "2010-05-01 04:00:00  [[(444.0, 2912.0), (444.0, 2913.0), (443.0, 29...   \n",
+       "...                                                                ...   \n",
+       "2010-05-31 20:00:00                                                 []   \n",
+       "2010-05-31 21:00:00                                                 []   \n",
+       "2010-05-31 22:00:00                                                 []   \n",
+       "2010-05-31 23:00:00                                                 []   \n",
+       "2010-06-01 00:00:00                                                 []   \n",
+       "\n",
+       "                    C_FLARE M_FLARE X_FLARE  \n",
+       "2010-05-01 00:00:00     [0]     [0]      []  \n",
+       "2010-05-01 01:00:00     [0]     [0]      []  \n",
+       "2010-05-01 02:00:00     [0]     [0]      []  \n",
+       "2010-05-01 03:00:00     [0]     [0]      []  \n",
+       "2010-05-01 04:00:00     [0]     [0]      []  \n",
+       "...                     ...     ...     ...  \n",
+       "2010-05-31 20:00:00      []      []      []  \n",
+       "2010-05-31 21:00:00      []      []      []  \n",
+       "2010-05-31 22:00:00      []      []      []  \n",
+       "2010-05-31 23:00:00      []      []      []  \n",
+       "2010-06-01 00:00:00      []      []      []  \n",
+       "\n",
+       "[745 rows x 4 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Polygon</th>\n      <th>C_FLARE</th>\n      <th>M_FLARE</th>\n      <th>X_FLARE</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2010-05-01 00:00:00</th>\n      <td>[[(425.0, 2914.0), (425.0, 2915.0), (424.0, 29...</td>\n      <td>[0]</td>\n      <td>[0]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>2010-05-01 01:00:00</th>\n      <td>[[(425.0, 2910.0), (425.0, 2911.0), (424.0, 29...</td>\n      <td>[0]</td>\n      <td>[0]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>2010-05-01 02:00:00</th>\n      <td>[[(432.0, 2910.0), (432.0, 2911.0), (431.0, 29...</td>\n      <td>[0]</td>\n      <td>[0]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>2010-05-01 03:00:00</th>\n      <td>[[(441.0, 2910.0), (441.0, 2911.0), (440.0, 29...</td>\n      <td>[0]</td>\n      <td>[0]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>2010-05-01 04:00:00</th>\n      <td>[[(444.0, 2912.0), (444.0, 2913.0), (443.0, 29...</td>\n      <td>[0]</td>\n      <td>[0]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2010-05-31 20:00:00</th>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>2010-05-31 21:00:00</th>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>2010-05-31 22:00:00</th>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>2010-05-31 23:00:00</th>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>2010-06-01 00:00:00</th>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n  </tbody>\n</table>\n<p>745 rows × 4 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "path = \"/home/akito/Documents/Predict_Solar_Flare_Mrcnn/coord_dfs/201005coord_df.pickle\"\n",
+    "coord_df = pickle_load(path)\n",
+    "coord_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "Python 3.6.10 64-bit ('py3.6': conda)",
+   "display_name": "Python 3.6.10 64-bit ('py3.6': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "c1adb5375f229d1eea2415024ee773cb2493614d24a9913a0f46472292080f4e"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -1099,7 +1159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9-final"
+   "version": "3.6.10-final"
   }
  },
  "nbformat": 4,
