二時間後にラベルをつけるように変更。 Keyboard Interupt認識しないエラー改善

--- a/src_dataset/Checking_Dataset.ipynb
+++ b/src_dataset/Checking_Dataset.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1198,6 +1198,147 @@
     "path = \"/media/akito/Data21/hmi.Mharp_720s/2012/201201/hmi.Mharp_720s.1275.20120109_140000_TAI.bitmap.fits\"\n",
     "map = sunpy.map.Map(path)\n",
     "map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                                                               Polygon  \\\n",
+       "2010-05-11 00:00:00  [[(3693.0, 2948.0), (3693.0, 2949.0), (3692.0,...   \n",
+       "2010-05-11 01:00:00  [[(3684.0, 2951.0), (3684.0, 2952.0), (3683.0,...   \n",
+       "2010-05-11 02:00:00  [[(3696.0, 2951.0), (3696.0, 2952.0), (3695.0,...   \n",
+       "2010-05-11 03:00:00  [[(3696.0, 2952.0), (3696.0, 2953.0), (3695.0,...   \n",
+       "2010-05-11 04:00:00  [[(3705.0, 2951.0), (3705.0, 2952.0), (3704.0,...   \n",
+       "2010-05-11 05:00:00  [[(3715.0, 2951.0), (3715.0, 2952.0), (3714.0,...   \n",
+       "2010-05-11 06:00:00  [[(3726.0, 2952.0), (3726.0, 2953.0), (3725.0,...   \n",
+       "2010-05-11 07:00:00  [[(3730.0, 2953.0), (3730.0, 2954.0), (3729.0,...   \n",
+       "2010-05-11 08:00:00  [[(3681.0, 2964.0), (3681.0, 2965.0), (3680.0,...   \n",
+       "2010-05-11 09:00:00  [[(3680.0, 2966.0), (3680.0, 2967.0), (3679.0,...   \n",
+       "2010-05-11 10:00:00  [[(3686.0, 2967.0), (3686.0, 2968.0), (3685.0,...   \n",
+       "2010-05-11 11:00:00                                                 []   \n",
+       "2010-05-11 12:00:00                                                 []   \n",
+       "2010-05-11 13:00:00                                                 []   \n",
+       "2010-05-11 14:00:00                                                 []   \n",
+       "2010-05-11 15:00:00                                                 []   \n",
+       "2010-05-11 16:00:00                                                 []   \n",
+       "2010-05-11 17:00:00                                                 []   \n",
+       "2010-05-11 18:00:00                                                 []   \n",
+       "2010-05-11 19:00:00                                                 []   \n",
+       "2010-05-11 20:00:00                                                 []   \n",
+       "2010-05-11 21:00:00                                                 []   \n",
+       "2010-05-11 22:00:00                                                 []   \n",
+       "2010-05-11 23:00:00                                                 []   \n",
+       "\n",
+       "                    C_FLARE M_FLARE X_FLARE  \n",
+       "2010-05-11 00:00:00     [0]     [0]     [0]  \n",
+       "2010-05-11 01:00:00     [0]     [0]     [0]  \n",
+       "2010-05-11 02:00:00     [0]     [0]     [0]  \n",
+       "2010-05-11 03:00:00     [0]     [0]     [0]  \n",
+       "2010-05-11 04:00:00     [0]     [0]     [0]  \n",
+       "2010-05-11 05:00:00     [0]     [0]     [0]  \n",
+       "2010-05-11 06:00:00     [0]     [0]     [0]  \n",
+       "2010-05-11 07:00:00     [0]     [0]     [0]  \n",
+       "2010-05-11 08:00:00     [0]     [0]     [0]  \n",
+       "2010-05-11 09:00:00     [0]     [0]     [0]  \n",
+       "2010-05-11 10:00:00     [0]     [0]     [0]  \n",
+       "2010-05-11 11:00:00     [0]     [0]     [0]  \n",
+       "2010-05-11 12:00:00     [0]     [0]     [0]  \n",
+       "2010-05-11 13:00:00      []      []      []  \n",
+       "2010-05-11 14:00:00      []      []      []  \n",
+       "2010-05-11 15:00:00      []      []      []  \n",
+       "2010-05-11 16:00:00      []      []      []  \n",
+       "2010-05-11 17:00:00      []      []      []  \n",
+       "2010-05-11 18:00:00      []      []      []  \n",
+       "2010-05-11 19:00:00      []      []      []  \n",
+       "2010-05-11 20:00:00      []      []      []  \n",
+       "2010-05-11 21:00:00      []      []      []  \n",
+       "2010-05-11 22:00:00      []      []      []  \n",
+       "2010-05-11 23:00:00      []      []      []  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Polygon</th>\n      <th>C_FLARE</th>\n      <th>M_FLARE</th>\n      <th>X_FLARE</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2010-05-11 00:00:00</th>\n      <td>[[(3693.0, 2948.0), (3693.0, 2949.0), (3692.0,...</td>\n      <td>[0]</td>\n      <td>[0]</td>\n      <td>[0]</td>\n    </tr>\n    <tr>\n      <th>2010-05-11 01:00:00</th>\n      <td>[[(3684.0, 2951.0), (3684.0, 2952.0), (3683.0,...</td>\n      <td>[0]</td>\n      <td>[0]</td>\n      <td>[0]</td>\n    </tr>\n    <tr>\n      <th>2010-05-11 02:00:00</th>\n      <td>[[(3696.0, 2951.0), (3696.0, 2952.0), (3695.0,...</td>\n      <td>[0]</td>\n      <td>[0]</td>\n      <td>[0]</td>\n    </tr>\n    <tr>\n      <th>2010-05-11 03:00:00</th>\n      <td>[[(3696.0, 2952.0), (3696.0, 2953.0), (3695.0,...</td>\n      <td>[0]</td>\n      <td>[0]</td>\n      <td>[0]</td>\n    </tr>\n    <tr>\n      <th>2010-05-11 04:00:00</th>\n      <td>[[(3705.0, 2951.0), (3705.0, 2952.0), (3704.0,...</td>\n      <td>[0]</td>\n      <td>[0]</td>\n      <td>[0]</td>\n    </tr>\n    <tr>\n      <th>2010-05-11 05:00:00</th>\n      <td>[[(3715.0, 2951.0), (3715.0, 2952.0), (3714.0,...</td>\n      <td>[0]</td>\n      <td>[0]</td>\n      <td>[0]</td>\n    </tr>\n    <tr>\n      <th>2010-05-11 06:00:00</th>\n      <td>[[(3726.0, 2952.0), (3726.0, 2953.0), (3725.0,...</td>\n      <td>[0]</td>\n      <td>[0]</td>\n      <td>[0]</td>\n    </tr>\n    <tr>\n      <th>2010-05-11 07:00:00</th>\n      <td>[[(3730.0, 2953.0), (3730.0, 2954.0), (3729.0,...</td>\n      <td>[0]</td>\n      <td>[0]</td>\n      <td>[0]</td>\n    </tr>\n    <tr>\n      <th>2010-05-11 08:00:00</th>\n      <td>[[(3681.0, 2964.0), (3681.0, 2965.0), (3680.0,...</td>\n      <td>[0]</td>\n      <td>[0]</td>\n      <td>[0]</td>\n    </tr>\n    <tr>\n      <th>2010-05-11 09:00:00</th>\n      <td>[[(3680.0, 2966.0), (3680.0, 2967.0), (3679.0,...</td>\n      <td>[0]</td>\n      <td>[0]</td>\n      <td>[0]</td>\n    </tr>\n    <tr>\n      <th>2010-05-11 10:00:00</th>\n      <td>[[(3686.0, 2967.0), (3686.0, 2968.0), (3685.0,...</td>\n      <td>[0]</td>\n      <td>[0]</td>\n      <td>[0]</td>\n    </tr>\n    <tr>\n      <th>2010-05-11 11:00:00</th>\n      <td>[]</td>\n      <td>[0]</td>\n      <td>[0]</td>\n      <td>[0]</td>\n    </tr>\n    <tr>\n      <th>2010-05-11 12:00:00</th>\n      <td>[]</td>\n      <td>[0]</td>\n      <td>[0]</td>\n      <td>[0]</td>\n    </tr>\n    <tr>\n      <th>2010-05-11 13:00:00</th>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>2010-05-11 14:00:00</th>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>2010-05-11 15:00:00</th>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>2010-05-11 16:00:00</th>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>2010-05-11 17:00:00</th>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>2010-05-11 18:00:00</th>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>2010-05-11 19:00:00</th>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>2010-05-11 20:00:00</th>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>2010-05-11 21:00:00</th>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>2010-05-11 22:00:00</th>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>2010-05-11 23:00:00</th>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "path = \"/home/akito/Documents/Predict_Solar_Flare_Mrcnn/coord_dfs/201005coord_df.pickle\"\n",
+    "pickle_load(path).loc[\"20100511\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(4096, 4096)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "source": [
+    "import sunpy.map\n",
+    "path = \"/media/akito/Data/HMI_REGION/2010/201005/hmi.M_45s.20100501_000000_TAI.2.magnetogram.fits\"\n",
+    "map = sunpy.map.Map(path)\n",
+    "map.data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(4102, 4102)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "import astropy.units as u\n",
+    "map=sunpy.map.Map(path)\n",
+    "map_rotated = map.rotate(angle = -1*float(map.meta[\"crota2\"])*u.deg)\n",
+    "cv2.imwrite(\"test.png\",map_rotated.data)\n",
+    "map_rotated.data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(4102, 4102, 3)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
+   "source": [
+    "img=cv2.imread(\"test.png\")\n",
+    "img.shape"
    ]
   }
  ],
