Json作成時にミスしていたので訂正

--- a/src_dataset/Checking_Dataset.ipynb
+++ b/src_dataset/Checking_Dataset.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2169,10 +2169,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "odict_keys(['info', 'images', 'annotations', 'categories'])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
+   "source": [
+    "path = \"/home/akito/Documents/Predict_Solar_Flare_Mrcnn/coco_pickles/201005.pickle\"\n",
+    "pickle_load(path).keys()"
+   ]
   }
  ],
  "metadata": {
