ディレクトリ構造修正

--- a/src_dataset/Checking_Dataset.ipynb
+++ b/src_dataset/Checking_Dataset.ipynb
@@ -2169,24 +2169,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = \"/home/akito/Documents/Predict_Solar_Flare_Mrcnn/coord_dfs/201006coord_df.pickle\"\n",
+    "df = pickle_load(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "odict_keys(['info', 'images', 'annotations', 'categories'])"
+       "Polygon    [[(3771.0, 1307.0), (3771.0, 1308.0), (3770.0,...\n",
+       "C_FLARE    [0, {\"magnitude\": \"C1.2\", \"id\": 95, \"NOAA_AR\":...\n",
+       "M_FLARE                                            [0, 0, 0]\n",
+       "X_FLARE                                            [0, 0, 0]\n",
+       "Name: 2010-06-13 04:00:00, dtype: object"
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 18
     }
    ],
    "source": [
-    "path = \"/home/akito/Documents/Predict_Solar_Flare_Mrcnn/coco_pickles/201005.pickle\"\n",
-    "pickle_load(path).keys()"
+    "df .loc[\"2010-06-13 04:00\"]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
