--- a/src_dataset/Checking_Dataset.ipynb
+++ b/src_dataset/Checking_Dataset.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,6 +410,174 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 改めてデータセットをチェックする(2020/11/16)\n",
+    "そもそも回転しなくてもいい可能性がある\n",
+    "→全部が同じだけずれているのであればそのままで重ねてみればいいかもしれない\n",
+    "M_45s→179.929642\n",
+    "M_720s→\n",
+    "mharp.bitmap→180.0825\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "179.929642"
+     },
+     "metadata": {},
+     "execution_count": 80
+    }
+   ],
+   "source": [
+    "full_disk_path = \"/Volumes/NO NAME/datasets/HMI_REGION/hmi.M_45s.20100501_000000_TAI.2.magnetogram.fits\"\n",
+    "full_disk_map = sunpy.map.Map(full_disk_path)\n",
+    "# full_disk_meta = [\"{}:{}\".format(key,value) for key,value in full_disk_map.meta.items()]\n",
+    "full_disk_map.meta[\"crota2\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "['simple:True',\n 'bitpix:16',\n 'naxis:2',\n 'naxis1:207',\n 'naxis2:279',\n 'extend:True',\n \"comment:FITS (Flexible Image Transport System) format is defined in 'Astronomy  and Astrophysics', volume 376, page 359; bibcode: 2001A&A...376..359H\",\n 'date:2012-04-10T05:26:33',\n 'telescop:SDO/HMI',\n 'instrume:HMI_SIDE1',\n 'wavelnth:6173.0',\n 'camera:1',\n 'bunit:none',\n 'content:HMI Active Region Patch',\n 'bld_vers:V6R1X',\n 'quality:66560',\n 'quallev1:0',\n 't_obs:2010.05.01_00:00:04_TAI',\n 't_rec:2010.05.01_00:00:00_TAI',\n 'trecepoc:1993.01.01_00:00:00_TAI',\n 'trecstep:720.0',\n 'trecunit:secs',\n 'cadence:720.0',\n 'datasign:1',\n 'harpnum:1',\n 'date-obs:2010-04-30T23:58:22.20',\n 'hflid:1001',\n 'hcftid:11',\n 'qlook:0',\n 'tintnum:8',\n 'sintnum:10',\n 'distcoef:/home/jsoc/cvs/Development/JSOC/proj/lev1.5_hmi/apps/../libs/lev15/',\n 'rotcoef:/home/jsoc/cvs/Development/JSOC/proj/lev1.5_hmi/apps/../libs/lev15/',\n 'polcalm:1',\n 'codever0:$Id: HMI_IQUV_averaging.c,v 1.19 2011/03/09 18:24:30 couvidat Exp $',\n 'codever1:$Id: interpol_code.c,v 1.1 2010/09/16 20:46:48 couvidat Exp $',\n 'codever2:$Id: interpol_code.c,v 1.1 2010/09/16 20:46:48 couvidat Exp $',\n 'codever3:$Id: polcal.c,v 1.4 2010/09/23 20:57:27 schou Exp $',\n 'ctype1:Internal ad-hoc (HPLN-TAN)',\n 'ctype2:Internal ad-hoc (HPLT-TAN)',\n 'crpix1:3599.0',\n 'crpix2:1105.0',\n 'crval1:-788.738281',\n 'crval2:474.840912',\n 'cdelt1:0.504348',\n 'cdelt2:0.504348',\n 'cunit1:arcsec',\n 'cunit2:arcsec',\n 'crota2:180.0825',\n 'crder1:nan',\n 'crder2:nan',\n 'csyser1:nan',\n 'csyser2:nan',\n 'wcsname:Internal ad-hoc (Helioprojective-tangent)',\n 'imcrpix1:2037.480957',\n 'imcrpix2:2049.743408',\n 'imcrval1:0.0',\n 'imcrval2:0.0',\n 'crsize1:207',\n 'crsize2:279',\n 'dsun_obs:150707441052.12',\n 'dsun_ref:149597863936.0',\n 'rsun_ref:696000000.0',\n 'crln_obs:251.257538',\n 'crlt_obs:-4.201544',\n 'car_rot:2096',\n 'obs_vr:3181.808728',\n 'obs_vw:28246.206151',\n 'obs_vn:3845.151942',\n 'rsun_obs:952.579468',\n 'totvals:57753',\n 'datavals:40283',\n 'missvals:17470',\n 'offdisk:0',\n 'quiet:1',\n 'active:2',\n 'nclass:2',\n 'on_patch:32',\n 'mask:32',\n 'arm_qual:0',\n 'arm_ncln:1840',\n 'h_merge:0',\n 'h_faint:0',\n 'armcodev:hmi_segment_module ver: 2.0',\n 'armdocu:http://jsoc.stanford.edu/jsocwiki/ARmaskDataSeries',\n 'hrpcodev:ingest_mharp ver: 1.0',\n 'hrpdocu:http://jsoc.stanford.edu/jsocwiki/HARPDataSeries',\n 'arm_modl:/builtin/hmi.M_Ic_noLimbDark_720s.production',\n 'arm_edge:2.5',\n 'arm_beta:0.3',\n 'tkp_kwid:1',\n 'tkp_klat:4',\n 'tkp_tau:0.018',\n 'tkp_tau2:0.8',\n 'tkp_actv:2',\n 'tkp_fnum:-2',\n 'tkp_ftim:2',\n 'tkp_mapr:10.397207708399',\n 'tkp_runn:hmi.Marmask_720s[2010.05.13/1d]{mask}',\n 'tkp_runt:20120409T220137',\n 'latdtmin:20.513599',\n 'londtmin:-87.762901',\n 'latdtmax:28.4676',\n 'londtmax:-70.368797',\n 'omega_dt:13.2286',\n 'npix:3842',\n 'size:342.819611',\n 'area:1108.229492',\n 'nacr:374',\n 'size_acr:33.371819',\n 'area_acr:107.599098',\n 'mtot:312077.0',\n 'mnet:215299.796875',\n 'mpos_tot:263688.40625',\n 'mneg_tot:48388.601562',\n 'mmean:56.038471',\n 'mstdev:95.140701',\n 'mskew:0.417232',\n 'mkurt:1.321714',\n 'lat_min:21.830992',\n 'lon_min:-82.512505',\n 'lat_max:25.662611',\n 'lon_max:-74.103981',\n 'lat_fwt:23.815041',\n 'lon_fwt:-78.194817',\n 'latfwtpo:23.822844',\n 'lonfwtpo:-78.326813',\n 'latfwtne:23.677998',\n 'lonfwtne:-75.876213',\n 't_frst:2010.04.30_00:00:00_TAI',\n 't_frst1:2010.05.01_00:00:00_TAI',\n 't_last1:2010.05.11_16:12:00_TAI',\n 't_last:2010.05.12_16:12:00_TAI',\n 'n_patch:1522',\n 'n_patch1:1282',\n 'n_patchm:0',\n 'noaa_ar:11067',\n 'noaa_num:1',\n 'noaa_ars:11067',\n 'calver64:0',\n 'recnum:5735',\n 'blank:-32768',\n 'checksum:WDJmaAHlYAHlaAHl',\n 'datasum:1060585462',\n 'history:',\n \"keycomments:{'SIMPLE': 'file does conform to FITS standard', 'BITPIX': 'number of bits per data pixel', 'NAXIS': 'number of data axes', 'NAXIS1': 'length of data axis 1', 'NAXIS2': 'length of data axis 2', 'EXTEND': 'FITS dataset may contain extensions', 'CHECKSUM': 'HDU checksum updated 2020-07-13T01:23:26', 'DATASUM': 'data unit checksum updated 2020-07-13T01:23:26'}\",\n 'waveunit:None',\n 'detector:HMI']"
+     },
+     "metadata": {},
+     "execution_count": 82
+    }
+   ],
+   "source": [
+    "bitmap_path = \"/Volumes/NO NAME/datasets/bitmap/hmi.Mharp_720s.1.20100501_000000_TAI.bitmap.fits\"\n",
+    "bitmap_map = sunpy.map.Map(bitmap_path)\n",
+    "bitmap_map.meta[\"crota2\"]\n",
+    "bitmap_meta = [\"{}:{}\".format(key,value) for key,value in bitmap_map.meta.items()]\n",
+    "bitmap_meta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "180.0134"
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "source": [
+    "full_disk_path = \"/Volumes/NO NAME/datasets/HMI_REGION/hmi.M_720s.20100501_000000_TAI.1.magnetogram.fits\"\n",
+    "full_disk_map = sunpy.map.Map(full_disk_path)\n",
+    "full_disk_map.meta[\"crota2\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "0.0"
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "source": [
+    "sharp_path = \"/Volumes/NO NAME/datasets/SHARP(CEA)/JSOC_20201116_517/hmi.sharp_cea_720s.1.20100501_000000_TAI.bitmap.fits\"\n",
+    "sharp_map = sunpy.map.Map(sharp_path)\n",
+    "sharp_map.meta[\"crota2\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "True"
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
+   "source": [
+    "# 画像書き出し\n",
+    "import cv2\n",
+    "cv2.imwrite(\"2010050100.png\",full_disk_map.data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rasterio.features import shapes\n",
+    "import numpy as np\n",
+    "ar_polygon = shapes(bitmap_map.data.astype(\"int16\"),mask=None,connectivity = 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "True"
+     },
+     "metadata": {},
+     "execution_count": 127
+    }
+   ],
+   "source": [
+    "from shapely.geometry import Polygon\n",
+    "image = cv2.imread(\"2010050100.png\")\n",
+    "overlay=image.copy()\n",
+    "ll_x = bitmap_map.meta[\"crpix1\"]\n",
+    "ll_y = bitmap_map.meta[\"crpix2\"]\n",
+    "int_coords = lambda x:np.array(x).round().astype(np.int32)\n",
+    "alpha = 0.5\n",
+    "for p,j in ar_polygon:\n",
+    "    poly = [(coord[0]+ll_x,coord[1]+ll_y) for coord in p[\"coordinates\"][0]]\n",
+    "    polygon = Polygon(poly)\n",
+    "    exterior = [int_coords(polygon.exterior.coords)]\n",
+    "    cv2.polylines(overlay,exterior,color=(255,255,0),isClosed=True,thickness = 10)\n",
+    "    cv2.addWeighted(overlay, alpha, image, 1 - alpha, 0, image)\n",
+    "cv2.imwrite(\"2010050100_overray.png\",image)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -420,7 +588,7 @@
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.6.10 64-bit",
+   "display_name": "Python 3",
    "metadata": {
     "interpreter": {
      "hash": "c1adb5375f229d1eea2415024ee773cb2493614d24a9913a0f46472292080f4e"
@@ -437,7 +605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10-final"
+   "version": "3.7.9-final"
   }
  },
  "nbformat": 4,
